# FractalApp

./: .gitignore  MainApp.py  README.md  TODO.md  frac_quick  requirements.txt
DEMO1/: Task1&2.ipynb  Task3.ipynb
DEMO1/.ipynb_checkpoints/: Task1&2-checkpoint.ipynb  Task3-checkpoint.ipynb
QtDesign/: README.md  SimpleFractal.py  SimpleFractal.ui  SimpleFractal_Resources.qrc
examples/: madelbrot_julia_examples.ipynb
src/JpCf/: README.md  pyproject.toml
src/JpCf/jpcf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/JpCf/jpcf/base/: frame_class.py
src/JpCf/jpcf/extended/: complex_class.py
