[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jpcf"
version = "0.0.1"
authors = [
  { name="Saul", email="saul.rathbos@gmail.com" },
]
description = "Jupyter Function Navigator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Intended Audience :: Education"
]
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "opencv-python>=4.12.0.88",
    "ipycanvas>=0.14.1"
]
